tests/models/enum/unnamed/i8/pass/gt.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(gt = 2)]
        i8
    ),
}
fn main() {}
