tests/models/enum/unnamed/i8/fail/le.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(le = 2.0)]
        i8
    ),
}
fn main() {}
